--- a/views/_partial/after-footer.ejs
+++ b/views/_partial/after-footer.ejs
@@ -1,32 +1,14 @@
 <!-- -->
 
-<!-- mathjax config similar to math.stackexchange -->
-
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      processEscapes: true
-    }
-  });
-</script>
-
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      tex2jax: {
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
-      }
-    });
-</script>
-
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Queue(function() {
-        var all = MathJax.Hub.getAllJax(), i;
-        for(i=0; i < all.length; i += 1) {
-            all[i].SourceElement().parentNode.className += ' has-jax';
-        }
-    });
-</script>
+<% 
+    var forbiddenLayoutList = ['login', 'edit', 'register', 'user', 
+    'score', 'ranklist'];
+    var MathJaxScriptNeed = forbiddenLayoutList.indexOf(layout) == -1;
+    console.log(MathJaxScriptNeed);
+%>
+<% if (MathJaxScriptNeed) { %>
+    <%- include('./MathJax') %>
+<% } %>
 
 <script>
 (function (window, document) {
